# InvoiceReader

./: .gitignore  0. Invoice Reader.py  1. Get pdfs and texts.py  123.py  2. Create Regex list.py  3. Inv List.py  Invoice Reader 2.0.py  Invoice Reader.py  InvoiceReader v3.py  Ojitex.yml  Practive - InvoiceReader.py  Project.txt  README.md  VNPT Telecommunication.yaml  class.py  main.py  output.csv  pyproject.toml  test.py  update.text
Excel WB/: test.xlsx
Template/: Default 2.0.yaml  Default.yaml  EASYINVOICE.yaml  EasyInvoice.yaml  Fast Invocie.yaml  HCL.yaml  HCL.yml  Ojitex BN.yaml  Ojitex.yml  Template HCL.yml  VNPT Vinaphone.yaml  tppc.yaml
