[tool.poetry]
name = "EvatReader"
version = "0.1.0"
description = "Extract data from EVAT invoice to csv"
authors = ["NgoMinhhh <ngonhatminh9898@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
invoice2data = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
